# ChangeLog for dev-perl/B-Hooks-EndOfScope
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/B-Hooks-EndOfScope/ChangeLog,v 1.29 2013/09/29 13:29:23 grobian Exp $

  29 Sep 2013; Fabian Groffen <grobian@gentoo.org>
  B-Hooks-EndOfScope-0.120.0.ebuild:
  Marked ~ppc-aix, ~x64-macos, bug #446444

  13 Jan 2013; Markus Meier <maekke@gentoo.org>
  B-Hooks-EndOfScope-0.120.0.ebuild:
  add ~arm, bug #449762

  08 Jan 2013; Torsten Veller <tove@gentoo.org>
  -B-Hooks-EndOfScope-0.90.0.ebuild:
  Cleanup

  10 Dec 2012; Agostino Sarubbo <ago@gentoo.org>
  B-Hooks-EndOfScope-0.120.0.ebuild:
  Add ~ppc, wrt bug #446444

*B-Hooks-EndOfScope-0.120.0 (08 Dec 2012)

  08 Dec 2012; Torsten Veller <tove@gentoo.org>
  +B-Hooks-EndOfScope-0.120.0.ebuild, metadata.xml:
  Version bump

  06 Dec 2012; Agostino Sarubbo <ago@gentoo.org>
  B-Hooks-EndOfScope-0.110.0.ebuild:
  Stable for ppc, wrt bug #441212

  06 Dec 2012; <ago@gentoo.org> B-Hooks-EndOfScope-0.110.0.ebuild:
  Stable for x86, wrt bug #441212

  06 Dec 2012; <ago@gentoo.org> B-Hooks-EndOfScope-0.110.0.ebuild:
  Stable for amd64, wrt bug #441212

  01 Sep 2012; Fabian Groffen <grobian@gentoo.org>
  B-Hooks-EndOfScope-0.110.0.ebuild:
  Marked ~ppc-aix, bug #432288

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  21 Apr 2012; Torsten Veller <tove@gentoo.org>
  -B-Hooks-EndOfScope-0.100.0.ebuild:
  Cleanup

*B-Hooks-EndOfScope-0.110.0 (23 Feb 2012)

  23 Feb 2012; Torsten Veller <tove@gentoo.org>
  +B-Hooks-EndOfScope-0.110.0.ebuild:
  Version bump

*B-Hooks-EndOfScope-0.100.0 (16 Feb 2012)

  16 Feb 2012; Torsten Veller <tove@gentoo.org>
  +B-Hooks-EndOfScope-0.100.0.ebuild:
  Version bump

  24 Sep 2011; Fabian Groffen <grobian@gentoo.org>
  B-Hooks-EndOfScope-0.90.0.ebuild:
  Marked ~x64-macos

  04 Sep 2011; Torsten Veller <tove@gentoo.org>
  -B-Hooks-EndOfScope-0.09.ebuild:
  Cleanup
