@@ -1,8 +1,8 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/B-Hooks-EndOfScope/B-Hooks-EndOfScope-0.110.0.ebuild,v 1.5 2012/12/06 18:50:09 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/B-Hooks-EndOfScope/B-Hooks-EndOfScope-0.110.0-r1.ebuild,v 1.1 2014/08/23 03:35:21 axs Exp $
 
-EAPI=4
+EAPI=5
 
 MODULE_AUTHOR=FLORA
 MODULE_VERSION=0.11
