@@ -1,8 +1,8 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/B-Hooks-EndOfScope/B-Hooks-EndOfScope-0.120.0.ebuild,v 1.4 2013/09/29 13:29:23 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/B-Hooks-EndOfScope/B-Hooks-EndOfScope-0.120.0-r1.ebuild,v 1.1 2014/08/23 03:35:21 axs Exp $
 
-EAPI=4
+EAPI=5
 
 MODULE_AUTHOR=BOBTFISH
 MODULE_VERSION=0.12
