@@ -3,14 +3,14 @@ Hash: SHA256
 
 DIST PAR-1.005.tar.gz 88293 SHA256 c5e2aeb0380c132de251c3f4eb2fad3953967b94b2869f800956aaceab5c484f SHA512 875dd2da927082f865fe3097c68be064ade37e702e1eec44c948e20ec54029dc27be71662d3209c8eee135d2708bab19647ee0d00c1a24fa7e448224f38726b2 WHIRLPOOL 3fbb2e6ca11cc780753c6fcd0d67ac063ff19d08969db0627f3c69ce44bd2e41a1d1b33579e0285e446499c90ca2cf06d89e785e4d3b2c57576b3d0f50de6824
 DIST PAR-1.007.tar.gz 89784 SHA256 92ddc469fc6fc5477087ddb03ef04673f10efbd7eed84db8db452f8c5bd08661 SHA512 8d5aa4b3425ce12f64116c5409227afdf975545654d5f87c854d78d2c9f850795dde8cea9fe7caec98c527dd1004eeb7bda0aaeb5ebba71bd94d9d6c449cdff2 WHIRLPOOL 98769afcfb3d572346b56db863b9ba9db8b8f2a3a797a4017266715e0adef9ad93145421e8155eab9ac6db77078c8dd6f665024f6cd67aee92c4f622fa740c70
-EBUILD PAR-1.5.0.ebuild 526 SHA256 fd95ea020602bf18f736a38cc180249310d92a8ff597808055cb99b7f67711a3 SHA512 e4a90735755b34aeb9b1e90e2889b02371a24991764822c207fb8658b68d73455732a88bea2fb6056aaf1c58f87de53125f8d7b0de3c732eae431222442bb714 WHIRLPOOL 478d2d450e7323063064493326095fbddb8ceaa2aba4ccc152f1847e3963b2e9d4083384a2589fc4f1bcf3ceb550b220a0044cda80a6620bc26ff500d64f031f
-EBUILD PAR-1.7.0.ebuild 529 SHA256 151c5371d148f543f0ad433197bcfcbb20789f4b756b3ccab2a4aaffde887978 SHA512 12fb057a4971ca79bc5ebe5c4029ebc0c80ea88f33936e44e8f54b908d24aa4ecb2d9330f88a4dde38b4bead89f39534aa7db4ce4fb536971e3246463b6d8725 WHIRLPOOL e5919ad489100a630861302fb5ea186b005a18ca40b6a8f9adf6b4d90651166a7d480d6d7ddea4f8e5c66eed424a0f1ec98a6aa4afea117b1547092b8ddfd01a
-MISC ChangeLog 2878 SHA256 cdb8587c97f6833cf8d6b2e1598fa4d2cac59118a23ddefdf25c8848068e8d9f SHA512 6d6d0b516e603759717f7a36c639866b4d032ca621612ec04073cfbfb4d7ae0d09747f6ff8906e822d756822e107d479541b30f3c959b266e5c9e422de1f844d WHIRLPOOL e6c3d62bccb1ef5b3398baa188b07d73c793f911256b77eed21ce45c2618c1f842c206e43b2af2e12dca7bae7ca28d52a8fdb699e0bb6395ea8b16a8232048ef
+EBUILD PAR-1.5.0-r1.ebuild 526 SHA256 cc9b069f65765cc4c973ba3d63e0607353fc9c87cb42cc413b91204b8685462b SHA512 07d8a6e2719b660d915bd428fb91748a196d0f9fd4374c294350292a1411de14f8132fa36dcdcd5aefde920f581bfb22d1edc17dd8b403572fae58e5838a8b6c WHIRLPOOL ee08511a2686ce2b52918ea0f73c65197e5e3cbdf20d210980db20625b2cc97dd78a73fae700d16bfdd885116edd60b97bc5c7308343fd91908843bf43ad5ab7
+EBUILD PAR-1.7.0-r1.ebuild 531 SHA256 9ad7ce20803a670f3fbc7bfa97f73509eaa47f0d155953b16e20dcdb4e5f0ecd SHA512 4364f03893b74791605f57177868968f239e58013ab825a739b93097db1a320fcfc32b2a9452a5ec5d7c19bd6f1f085bfc2b8b22ceebaeca9b07d3ebeed54f58 WHIRLPOOL 8bdc72ad208c3686419c8281eb284a450b4a7a4b27d84915194a8b0a89d35ccbe42eef94b3c891b18c3c4fa13cc24430354ea5fdde07504fa78d83f735f5764a
+MISC ChangeLog 3229 SHA256 84f54bbf04c0dfef530c2aef11bc02a2d127d1105edaa4404dd8927296ad1e19 SHA512 59c2160e15741d761e3cbc2f05ed92f7f3b7d0168178a4e26b5da5a606327b10f8dae12d76fd004968543636bc4f73c7f18860d99f256f4cf955e04b5c08c7c7 WHIRLPOOL 565a27fe3441f0581fd4443c45a4e2049fad4684c1810b0170565e23aa6787f95e6bf62f0094c2771f04bdc409206ddde6e42aee3687cf8a499d947a4eeb8146
 MISC metadata.xml 462 SHA256 e5177d397a8aec43704eda293f8756ce22cad1bf5ea531f7a13f3b307a827431 SHA512 67cee0db829a09c3d35d13c1cf908187e30a28157ede90912519c45d5b61e7d2bee2b87eb8e10a711233e59a6d02df9a649491b7c485bbedcf583ce82fb37c8d WHIRLPOOL 9311d5d6c3015acf856e0a6991a2d10d588e469b785d58548b2e6a7fc7bf0aee7b389bb2d4710fd19d930c3a9abcf93a5ceb49161914d6fa9b8f96a9f8ec9201
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlCWZSAACgkQV3J2n04EauwLSACgthlVWL0gSd9qR/tsf1qw8biM
-HsQAn0JhOZblFzNjGjMG0jSKSShsP+YO
-=ZcQL
+iF4EAREIAAYFAlP4C8EACgkQ2ugaI38ACPB0ywEAmTtpcKLSXKbE7EpSA876xmix
+dEjBD1uL81O0tUPlyJQA/jcn0+KCeeHxcfuK9YSZ1ocsNGm8I/iRo0IuIOC6OF/k
+=uw5i
 -----END PGP SIGNATURE-----
