@@ -1,8 +1,8 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/PAR/PAR-1.7.0.ebuild,v 1.1 2012/11/04 12:52:47 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/PAR/PAR-1.7.0-r1.ebuild,v 1.1 2014/08/23 03:33:34 axs Exp $
 
-EAPI=4
+EAPI=5
 
 MODULE_AUTHOR=RSCHUPP
 MODULE_VERSION=1.007
