@@ -1,12 +1,12 @@
 DEFINED_PHASES=compile configure install prepare test unpack
-DEPEND=>=dev-perl/Module-Implementation-0.50.0 >=dev-perl/Module-Runtime-0.12.0 >=dev-perl/Sub-Exporter-Progressive-0.1.6 >=virtual/perl-ExtUtils-CBuilder-0.260.0 || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] )
+DEPEND=>=dev-perl/Module-Implementation-0.50.0 >=dev-perl/Module-Runtime-0.12.0 >=dev-perl/Sub-Exporter-Progressive-0.1.6 >=virtual/perl-ExtUtils-CBuilder-0.260.0 dev-lang/perl:=[-build(-)]
 DESCRIPTION=Execute code after a scope finished compilation
-EAPI=4
+EAPI=5
 HOMEPAGE=http://search.cpan.org/dist/B-Hooks-EndOfScope/
 KEYWORDS=~amd64 ~arm ~ppc ~x86 ~ppc-aix ~x64-macos
 LICENSE=|| ( Artistic GPL-1 GPL-2 GPL-3 )
-RDEPEND=>=dev-perl/Module-Implementation-0.50.0 >=dev-perl/Module-Runtime-0.12.0 >=dev-perl/Sub-Exporter-Progressive-0.1.6 || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] )
+RDEPEND=>=dev-perl/Module-Implementation-0.50.0 >=dev-perl/Module-Runtime-0.12.0 >=dev-perl/Sub-Exporter-Progressive-0.1.6 dev-lang/perl:=[-build(-)]
 SLOT=0
 SRC_URI=mirror://cpan/authors/id/B/BO/BOBTFISH/B-Hooks-EndOfScope-0.12.tar.gz
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	perl-module	a6a2d5c77bdaeba2794b167689cafb7a	toolchain-funcs	0f1760274637a138b99bb649202ea402	unpacker	f300a7ca9131b1024a79762e8edd3c52
-_md5_=243373d323db44e887d5c3c86908bfd1
+_md5_=09240d3ffff7d5325d495c1fa6e54fed
