@@ -1,12 +1,12 @@
 DEFINED_PHASES=compile configure install prepare test unpack
-DEPEND=virtual/perl-AutoLoader >=virtual/perl-IO-Compress-1.30 >=dev-perl/Archive-Zip-1.00 >=dev-perl/PAR-Dist-0.32 || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] )
+DEPEND=virtual/perl-AutoLoader >=virtual/perl-IO-Compress-1.30 >=dev-perl/Archive-Zip-1.00 >=dev-perl/PAR-Dist-0.32 dev-lang/perl:=[-build(-)]
 DESCRIPTION=Perl Archive Toolkit
-EAPI=4
+EAPI=5
 HOMEPAGE=http://search.cpan.org/dist/PAR/
 KEYWORDS=~amd64 ~x86 ~x86-solaris
 LICENSE=|| ( Artistic GPL-1 GPL-2 GPL-3 )
-RDEPEND=virtual/perl-AutoLoader >=virtual/perl-IO-Compress-1.30 >=dev-perl/Archive-Zip-1.00 >=dev-perl/PAR-Dist-0.32 || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] )
+RDEPEND=virtual/perl-AutoLoader >=virtual/perl-IO-Compress-1.30 >=dev-perl/Archive-Zip-1.00 >=dev-perl/PAR-Dist-0.32 dev-lang/perl:=[-build(-)]
 SLOT=0
 SRC_URI=mirror://cpan/authors/id/R/RS/RSCHUPP/PAR-1.007.tar.gz
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	perl-module	a6a2d5c77bdaeba2794b167689cafb7a	toolchain-funcs	0f1760274637a138b99bb649202ea402	unpacker	f300a7ca9131b1024a79762e8edd3c52
-_md5_=12d39a589d38ba836fe0ef5ec581ab6d
+_md5_=b77fcbaa76c436897588e0df08132cef
