@@ -1,6 +1,15 @@
 # ChangeLog for dev-perl/B-Hooks-EndOfScope
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/B-Hooks-EndOfScope/ChangeLog,v 1.29 2013/09/29 13:29:23 grobian Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/B-Hooks-EndOfScope/ChangeLog,v 1.30 2014/08/23 03:35:21 axs Exp $
+
+*B-Hooks-EndOfScope-0.120.0-r1 (23 Aug 2014)
+*B-Hooks-EndOfScope-0.110.0-r1 (23 Aug 2014)
+
+  23 Aug 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
+  +B-Hooks-EndOfScope-0.110.0-r1.ebuild, +B-Hooks-EndOfScope-0.120.0-r1.ebuild,
+  -B-Hooks-EndOfScope-0.110.0.ebuild, -B-Hooks-EndOfScope-0.120.0.ebuild:
+  bumped EAPI to 5; committed directly to stable as no other changes present and
+  revbump helps stable systems to keep from dieing on perl-5.18 upgrade
 
   29 Sep 2013; Fabian Groffen <grobian@gentoo.org>
   B-Hooks-EndOfScope-0.120.0.ebuild:
